catkin_ws/logs/backend/build.make.769.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::run(RosHandler&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:105:88: error: expected ‘)’ before ‘;’ token
   currentPosition = (poseGraph->getPositionOfId(nodes.size()-1) * tm_lpe.cast<double>(); // last node    
                                                                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:109:103: error: no matching function for call to ‘SLAM::IPoseGraph::addEdgeFromIdToCurrent(Eigen::internal::cast_return_type<Eigen::Matrix<float, 4, 4>, const Eigen::CwiseUnaryOp<Eigen::internal::scalar_cast_op<float, double>, const Eigen::Matrix<float, 4, 4> > >::type, Eigen::internal::cast_return_type<Eigen::Matrix<float, 6, 6>, const Eigen::CwiseUnaryOp<Eigen::internal::scalar_cast_op<float, double>, const Eigen::Matrix<float, 6, 6> > >::type, int)’
   poseGraph->addEdgeFromIdToCurrent(tm_lpe.cast<double>(), im_lpe.cast<double>(), nodes.back().getId());
                                                                                                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:109:103: note: candidate is:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:14:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IPoseGraph.h:73:15: note: virtual void SLAM::IPoseGraph::addEdgeFromIdToCurrent(const Isometry3d&, const Eigen::Matrix<double, 6, 6>&, int)
  virtual void addEdgeFromIdToCurrent(const Eigen::Isometry3d& measurement, const Eigen::Matrix<double, 6, 6>& informationMatrix, int idFrom) = 0;
               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IPoseGraph.h:73:15: note:   no known conversion for argument 1 from ‘Eigen::internal::cast_return_type<Eigen::Matrix<float, 4, 4>, const Eigen::CwiseUnaryOp<Eigen::internal::scalar_cast_op<float, double>, const Eigen::Matrix<float, 4, 4> > >::type {aka const Eigen::CwiseUnaryOp<Eigen::internal::scalar_cast_op<float, double>, const Eigen::Matrix<float, 4, 4> >}’ to ‘const Isometry3d& {aka const Eigen::Transform<double, 3, 1>&}’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:327:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
